--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore files in Word, as there should always be a pdf version.
+*.doc
+*.docx
