fix: add branch name to test db
So it doesn't drop a "global" test database

--- a/config/database.yml
+++ b/config/database.yml
@@ -99,7 +99,7 @@ development:
 
 test:
   <<: *default
-  database: learning_app_test
+  database: learning_app_test_<%= `git branch --show-current`.strip %>
 
 production:
   <<: *default
