fix evaluation_feedback fixture

--- a/test/fixtures/evaluation_feedbacks.yml
+++ b/test/fixtures/evaluation_feedbacks.yml
@@ -1,9 +1,11 @@
 feedback1:
   evaluation: evaluation1
-  student: student_user
-  feedback: "Buen quiz, pero algunas preguntas no estaban claras."
+  student: student
+  teacher: teacher
+  content: "Buen quiz, pero algunas preguntas no estaban claras."
 
 feedback2:
   evaluation: evaluation2
-  student: student_user
-  feedback: "No me vencerás Doren, no me vencerás."
+  student: student
+  teacher: teacher
+  content: "No me vencerás Doren, no me vencerás."
